2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: When extracting files from the .zip
	  file, ensure that the output file is closed.  Properly pre-render
	  ecma namespace documentation.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Add reference to ICSharpCode.SharpZipLib.dll.
	* mdoc.exe.sources: Add Mono.Rocks/ObjectRocks.cs,
	  Mono.Rocks/StreamRocks.cs.
	* Mono.Documentation/webdoc.cs: Refactor into smaller methods.  Extract 
	  ZIP file contents in addition to generating HTML output.  Use
	  monodoc helper methods to determine cache directory.
	* Mono.Documentation/ObjectRocks.cs: Rename to
	  Mono.Rocks/ObjectRocks.cs.
	* Mono.Rocks/ObjectRocks.cs: Add Check.Destination().
	* Mono.Rocks/StreamRocks.cs: Added; extension methods for Streams.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: The timestamp logic was wrong it the
	  output directory didn't exist.  Fix.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Do as make(1) does: if the
	  target directory already exists and is newer than the source files, 
	  don't regenerate output.  (Greatly speeds things up if nothing has
	  changed.)  Add a --force-update option to disable this behavior.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Change the default -o value to
	  include a "cache" intermediate directory.  This makes it easier to
	  kill the entire cache at once.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Provide nice default -o value.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Load documentation through a
	  HelpSource, not through the RootTree, as URLs of the form
	  "ecma:0#AvoidExtensionMethodOnSystemObjectRule/" use the number (0
	  in this case) as a HelpSource-relative identifier.  Result: you get
	  the wrong documentation if you go through RootTree.
